# openguard

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  guards-agentic.yaml  guards-test.yaml  guards.yaml.example  louder.yaml.example  pyproject.toml  skills-lock.json  spec.md  wrangler.toml
.agents/skills/deploy-web/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/test-frontend/: SKILL.md
.github/hooks/: lint.json
.github/workflows/: ci.yaml  docker-publish.yaml  integration.yaml  pypi-publish.yaml
.harness/louder/: build-summary.md
assets/: index.html
benches/00-simple-env/: .env
examples/: 01-basic-content-filter.yaml  02-pii-filter-all.yaml  03-max-tokens-cap.yaml  04-combined-guards.yaml  05-advanced-matchers.yaml  06-keyword-blocking.yaml  07-llm-input-inspection.yaml
http/: base.http  helpers.http  variables.http
http/tests/: anthropic.http  base.http  edge_cases.http  protocol.http  responses.http
http/tests/guards/: agentic_dangerous_cmds.http  agentic_llm_inspection.http  agentic_pii.http  agentic_secrets.http  content_filter.http  keyword_filter.http  llm_input_inspection.http  llm_input_inspection_redteam.http  llm_input_inspection_redteam_v2.http  llm_input_inspection_redteam_v3.http  llm_tool_inspection.http  max_tokens.http  pii_filter.http  tool_filter.http
http/tests/scenarios/: adversarial.http  agentic_combined.http  edge_cases.http  pii_advanced.http
presets/: agentic.yaml  full.yaml
presets/modules/: credentials-block.yaml  credentials-detect.yaml  credentials-sanitize.yaml  inspect-injection.yaml  inspect-self-replication.yaml  inspect-tool-poisoning.yaml  links-sanitize.yaml  pii.yaml  shell-block.yaml  shell-sanitize.yaml  tokens-cap.yaml
public/: astro.config.mjs  index.html  package-lock.json  package.json
public/public/: index.html  robots.txt
public/src/: content.config.ts
public/src/components/: SiteHeader.astro
public/src/components/starlight/: Drawer.astro  Header.astro  PageFrame.astro
public/src/config/: site-header.mjs
public/src/content/blog/: 40-months-of-prompt-injections.mdx  english-firewall.mdx  prompt-injections.mdx  what-is-openguard.mdx  wiring-is-more-dangerous-than-the-weights.mdx
public/src/content/docs/: index.mdx
public/src/content/docs/docs/: configuration.mdx  getting-started.mdx  index.mdx
public/src/content/docs/docs/guards/: content_filter.mdx  credential_filter.mdx  keyword_filter.mdx  llm_input_inspection.mdx  llm_tool_inspection.mdx  max_tokens.mdx  pii_filter.mdx  tool_filter.mdx
public/src/content/docs/guards/: content_filter.mdx  keyword_filter.mdx  max_tokens.mdx
public/src/layouts/: BlogLayout.astro
public/src/pages/: 404.astro  index.astro
public/src/pages/blog/: [slug].astro  index.astro
public/src/styles/: custom.css  header-star-cta.css
scripts/: generate_docs.py  louder-wrapper.sh  openguard-wrapper.sh
spec/: concept.md  features.md  landing.md  responses-api.md
src/: chat.py  chat_node.py  cli.py  config.py  dotty.py  events.py  format.py  guard_engine.py  guard_meta.py  guards.py  llm.py  llm_registry.py  log.py  main.py  mapper.py  responses.py  rewriter.py  selection.py  state.py
src/guard_types/: __init__.py  content_filter.py  credential_filter.py  keyword_filter.py  llm_input_inspection.py  llm_tool_inspection.py  max_tokens.py  pii_filter.py  tool_filter.py
src/launch/: core.py  integrations.py  setup.py  strategies.py  types.py
src/middleware/: request_id.py  request_state.py
tests/: __init__.py  conftest.py  test_chat_anthropic.py  test_config.py  test_guard_engine.py  test_guards.py  test_integration.py  test_keyword_filter.py  test_launch.py  test_launch_setup.py  test_llm_input_inspection_guard.py  test_llm_tool_inspection.py  test_proxy.py  test_responses.py  test_stream_redactor.py  test_tool_filter.py
